--- a/penguins_plotly.Rmd
+++ b/penguins_plotly.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "penguins_plotly"
+title: "Interactive Penguins"
 author: "Trevor Maggart"
 date: "10/19/2021"
 output: html_document
@@ -7,24 +7,33 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+# Packages 
+library(tidyverse)
+library(palmerpenguins)
+library(plotly)
+library(DT)
+
+# install.packages("package_name")
 ```
 
-## R Markdown
+Scatterplot of penguin flipper_length_mm (x-axis) versus body_mass_g ( y-axis), with points having different colors based ons pecies
+```{r}
+# Scatter
+penguins_graph <- ggplot(data=penguins, aes(x=flipper_length_mm,y=body_mass_g)) +
+  geom_point(aes(color = species))
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+ggplotly(penguins_graph)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+datatable(penguins)
 ```
+I'm going to make a column graph (using geom_bar) of counts of penguins by island, with fill color indicating penguins species. Then we're going to save that using `ggsave`.
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+penguins_bar <- ggplot(data = penguins, aes(x = island)) +
+  geom_bar(aes(fill = species))
+
+ggsave(here("final_figures", "island_counts.png"))
+```
